--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>Computer Science, GT '21</p>
 <ul>
     <h2>Links</h2>
-    <li><a href="https://linktr.ee/annaho"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
+    <li><a href="https://linktr.ee/annaho"><i class="fa fa-tree" aria-hidden="true"></i></a></li>
 </ul>
 </div>
     </body>
